kubernetes/apps/testing/emqx/cluster/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx-test
  labels:
    apps.emqx.io/db-role: core
    apps.emqx.io/instance: emqx-test
  annotations:
    io.cilium/lb-ipam-ips: "192.168.20.213"
spec:
  type: LoadBalancer
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
    - name: ws
      protocol: TCP
      port: 8083
  selector:
    apps.emqx.io/db-role: core
    apps.emqx.io/instance: emqx-test
