kubernetes/apps/testing/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-emqx-dashboard
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host emqx-test.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-test-dashboard
                port:
                  number: 18083
  tls:
    - hosts:
        - *host
